--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@athenna/config": "^4.20.0",
     "@athenna/core": "^4.36.0",
     "@athenna/database": "^4.42.0",
-    "@athenna/http": "^4.30.0",
+    "@athenna/http": "^4.31.0",
     "@athenna/ioc": "^4.19.0",
     "@athenna/logger": "^4.20.0",
     "@athenna/view": "^4.21.0",
@@ -39,6 +39,7 @@
     "@fastify/static": "^7.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
+    "@vinejs/vine": "^2.0.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
@@ -247,7 +248,9 @@
       "#src/models/user"
     ],
     "middlewares": [
-      "#src/middlewares/auth.middleware"
+      "#src/middlewares/auth.middleware",
+      "#src/validators/user.validator",
+      "#src/validators/login.validator"
     ]
   }
 }
