test(auth): add e2e tests for auth controller

--- a/.env.test
+++ b/.env.test
@@ -2,15 +2,15 @@ HOST=localhost
 PORT=3000
 
 APP_NAME=@athenna/athenna
-APP_ENV=local
+APP_ENV=test
 APP_DEBUG=true
 APP_URL=http://${HOST}:${PORT}
 APP_DOMAIN=${HOST}:${PORT}
 APP_DOCUMENTATION=${APP_URL}/docs
 APP_SOURCE=https://github.com/AthennaIO
 
-LOG_HTTP=true
-LOG_CHANNEL=stack
+LOG_HTTP=false
+LOG_CHANNEL=discard
 
 DB_CONNECTION=fake
 DB_HOST=localhost
