--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm install
 
       - name: Setup database tables
-        run: node artisan db:fresh
+        run: node artisan db:fresh --env test --connection postgres
 
       - name: Run tests
         run: npm run test:coverage
