ci(env): add exception logs

--- a/.env.test
+++ b/.env.test
@@ -10,7 +10,7 @@ APP_DOCUMENTATION=${APP_URL}/docs
 APP_SOURCE=https://github.com/AthennaIO
 
 LOG_HTTP=false
-LOG_CHANNEL=discard
+LOG_CHANNEL=stack
 
 DB_CONNECTION=fake
 DB_HOST=localhost
