--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run migrations
-        run: node artisan migration:run --env test --connection postgres
-
-      - name: Run seeders
-        run: node artisan db:seed --env test --connection postgres
+      - name: Run migrations and seeders
+        run: node artisan db:fresh --env test --connection postgres
 
       - name: Run tests
         run: npm run test:coverage
