ci(test): test ci

--- a/.env.test
+++ b/.env.test
@@ -12,7 +12,7 @@ APP_SOURCE=https://github.com/AthennaIO
 LOG_HTTP=false
 LOG_CHANNEL=stack
 
-DB_CONNECTION=fake
+DB_CONNECTION=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_DEBUG=false
