ci(log): disable exception logs

--- a/.env.test
+++ b/.env.test
@@ -10,7 +10,7 @@ APP_DOCUMENTATION=${APP_URL}/docs
 APP_SOURCE=https://github.com/AthennaIO
 
 LOG_HTTP=false
-LOG_CHANNEL=stack
+LOG_CHANNEL=discard
 
 DB_CONNECTION=postgres
 DB_HOST=localhost
