--- a/.env.test
+++ b/.env.test
@@ -22,3 +22,9 @@ DB_DATABASE=athenna
 
 JWT_SECRET=I62hxxdSwWnNqEw
 JWT_EXPIRATION=1h
+
+MAIL_MAILER=smtp
+MAIL_HOST=localhost
+MAIL_PORT=5025
+MAIL_USERNAME=
+MAIL_PASSWORD=
