--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@athenna/http": "^4.32.0",
     "@athenna/ioc": "^4.19.0",
     "@athenna/logger": "^4.20.0",
+    "@athenna/mail": "^4.18.0",
     "@athenna/view": "^4.21.0",
     "@fastify/cors": "^8.5.0",
     "@fastify/helmet": "^11.1.1",
@@ -141,7 +142,11 @@
       "@athenna/core/providers/CoreProvider",
       "@athenna/http/providers/HttpRouteProvider",
       "@athenna/http/providers/HttpServerProvider",
-      "@athenna/database/providers/DatabaseProvider"
+      "@athenna/database/providers/DatabaseProvider",
+      "@athenna/view/providers/ViewProvider",
+      "@athenna/mail/providers/MailProvider",
+      "@athenna/mail/providers/SmtpServerProvider",
+      "@athenna/view/providers/ViewProvider"
     ],
     "controllers": [
       "#src/controllers/user.controller",
@@ -211,7 +216,8 @@
       "migration:revert": {
         "path": "@athenna/database/commands/MigrationRevertCommand",
         "loadApp": true
-      }
+      },
+      "make:view": "@athenna/view/commands/MakeViewCommand"
     },
     "templates": {
       "exception": "node_modules/@athenna/core/templates/exception.edge",
@@ -229,7 +235,8 @@
       "terminator": "node_modules/@athenna/http/templates/terminator.edge",
       "model": "node_modules/@athenna/database/templates/model.edge",
       "seeder": "node_modules/@athenna/database/templates/seeder.edge",
-      "migration": "node_modules/@athenna/database/templates/migration.edge"
+      "migration": "node_modules/@athenna/database/templates/migration.edge",
+      "view": "node_modules/@athenna/view/templates/view.edge"
     },
     "directories": {
       "bootstrap": "bin",
