--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "devDependencies": {
     "@athenna/test": "^4.23.0",
     "@athenna/tsconfig": "^4.12.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.36.0",
@@ -170,6 +172,11 @@
       "make:terminator": "@athenna/http/commands/MakeTerminatorCommand",
       "serve": {
         "path": "@athenna/core/commands/ServeCommand",
+        "nodemon": {
+          "ignore": [
+            "storage/*"
+          ]
+        },
         "stayAlive": true
       },
       "build": {
