feat(validator): add validation to update route

--- a/package.json
+++ b/package.json
@@ -280,6 +280,7 @@
       "#src/middlewares/auth.middleware",
       "#src/validators/login.validator",
       "#src/validators/register.validator",
+      "#src/validators/update.validator",
       "#src/interceptors/response.interceptor",
       "#src/middlewares/pagination.middleware"
     ]
