--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
     "#tests": "./tests/index.js"
   },
   "dependencies": {
-    "@athenna/artisan": "^4.41.0",
-    "@athenna/common": "^4.36.0",
-    "@athenna/config": "^4.20.0",
-    "@athenna/core": "^4.37.0",
-    "@athenna/database": "^4.49.0",
-    "@athenna/http": "^4.32.0",
-    "@athenna/ioc": "^4.19.0",
-    "@athenna/logger": "^4.20.0",
+    "@athenna/artisan": "^4.42.0",
+    "@athenna/common": "^4.39.0",
+    "@athenna/config": "^4.21.0",
+    "@athenna/core": "^4.38.0",
+    "@athenna/database": "^4.50.0",
+    "@athenna/http": "^4.34.0",
+    "@athenna/ioc": "^4.20.0",
+    "@athenna/logger": "^4.21.0",
     "@athenna/mail": "^4.18.0",
-    "@athenna/view": "^4.21.0",
+    "@athenna/validator": "^4.1.0",
+    "@athenna/view": "^4.22.0",
     "@fastify/cors": "^8.5.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/rate-limit": "^8.1.1",
     "@fastify/static": "^7.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
-    "@vinejs/vine": "^2.0.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
@@ -138,7 +138,6 @@
   "athenna": {
     "services": [
       "#src/helpers/queue",
-      "#src/helpers/validator",
       "#src/services/user.service",
       "#src/services/auth.service"
     ],
@@ -150,9 +149,9 @@
       "@athenna/view/providers/ViewProvider",
       "@athenna/mail/providers/MailProvider",
       "@athenna/mail/providers/SmtpServerProvider",
-      "@athenna/view/providers/ViewProvider",
       "#src/providers/queueworker.provider",
-      "#src/providers/validator.provider"
+      "#src/providers/validator.provider",
+      "@athenna/validator/providers/ValidatorProvider"
     ],
     "controllers": [
       "#src/controllers/user.controller",
@@ -228,7 +227,8 @@
         "path": "@athenna/database/commands/MigrationRevertCommand",
         "loadApp": true
       },
-      "make:view": "@athenna/view/commands/MakeViewCommand"
+      "make:view": "@athenna/view/commands/MakeViewCommand",
+      "make:validator": "@athenna/validator/commands/MakeValidatorCommand"
     },
     "templates": {
       "exception": "node_modules/@athenna/core/templates/exception.edge",
@@ -247,7 +247,9 @@
       "model": "node_modules/@athenna/database/templates/model.edge",
       "seeder": "node_modules/@athenna/database/templates/seeder.edge",
       "migration": "node_modules/@athenna/database/templates/migration.edge",
-      "view": "node_modules/@athenna/view/templates/view.edge"
+      "view": "node_modules/@athenna/view/templates/view.edge",
+      "validator-http": "node_modules/@athenna/validator/templates/validator-http.edge",
+      "validator-console": "node_modules/@athenna/validator/templates/validator-console.edge"
     },
     "directories": {
       "bootstrap": "bin",
@@ -258,6 +260,7 @@
       "providers": "src/providers",
       "facades": "src/providers/facades",
       "services": "src/services",
+      "validators": "src/validators",
       "commands": "src/commands",
       "controllers": "src/controllers",
       "middlewares": "src/middlewares",
@@ -278,11 +281,13 @@
     ],
     "middlewares": [
       "#src/middlewares/auth.middleware",
-      "#src/validators/login.validator",
-      "#src/validators/register.validator",
-      "#src/validators/update.validator",
       "#src/interceptors/response.interceptor",
       "#src/middlewares/pagination.middleware"
+    ],
+    "validators": [
+      "#src/validators/login.validator",
+      "#src/validators/register.validator",
+      "#src/validators/update.validator"
     ]
   }
 }
