--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@athenna/common": "^4.39.0",
     "@athenna/config": "^4.21.0",
     "@athenna/core": "^4.38.0",
-    "@athenna/database": "^4.50.0",
+    "@athenna/database": "^4.52.0",
     "@athenna/http": "^4.34.0",
     "@athenna/ioc": "^4.20.0",
     "@athenna/logger": "^4.21.0",
     "@athenna/mail": "^4.18.0",
-    "@athenna/validator": "^4.1.0",
+    "@athenna/validator": "^4.2.0",
     "@athenna/view": "^4.22.0",
     "@fastify/cors": "^8.5.0",
     "@fastify/helmet": "^11.1.1",
@@ -149,9 +149,8 @@
       "@athenna/view/providers/ViewProvider",
       "@athenna/mail/providers/MailProvider",
       "@athenna/mail/providers/SmtpServerProvider",
-      "#src/providers/queueworker.provider",
-      "#src/providers/validator.provider",
-      "@athenna/validator/providers/ValidatorProvider"
+      "@athenna/validator/providers/ValidatorProvider",
+      "#src/providers/queueworker.provider"
     ],
     "controllers": [
       "#src/controllers/user.controller",
