feat(queue): improve jobs

--- a/package.json
+++ b/package.json
@@ -289,10 +289,7 @@
       "#src/validators/update.validator"
     ],
     "jobs": [
-      "#src/jobs/userconfirm.job",
-      "#src/jobs/useremail.job",
-      "#src/jobs/useremailpassword.job",
-      "#src/jobs/userpassword.job"
+      "#src/jobs/mail.job"
     ]
   }
 }
