--- a/package.json
+++ b/package.json
@@ -24,47 +24,47 @@
     "#tests": "./tests/index.js"
   },
   "dependencies": {
-    "@athenna/artisan": "^4.42.0",
-    "@athenna/common": "^4.40.0",
-    "@athenna/config": "^4.21.0",
-    "@athenna/core": "^4.38.0",
-    "@athenna/database": "^4.52.0",
-    "@athenna/http": "^4.34.0",
-    "@athenna/ioc": "^4.20.0",
-    "@athenna/logger": "^4.21.0",
-    "@athenna/mail": "^4.18.0",
-    "@athenna/queue": "^4.3.0",
-    "@athenna/validator": "^4.2.0",
-    "@athenna/view": "^4.22.0",
+    "@athenna/artisan": "^4.43.0",
+    "@athenna/common": "^4.42.0",
+    "@athenna/config": "^4.22.0",
+    "@athenna/core": "^4.39.0",
+    "@athenna/database": "^4.55.0",
+    "@athenna/http": "^4.35.0",
+    "@athenna/ioc": "^4.21.0",
+    "@athenna/logger": "^4.22.0",
+    "@athenna/mail": "^4.19.0",
+    "@athenna/queue": "^4.6.0",
+    "@athenna/validator": "^4.3.0",
+    "@athenna/view": "^4.23.0",
     "@fastify/cors": "^8.5.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/rate-limit": "^8.1.1",
-    "@fastify/static": "^7.0.1",
+    "@fastify/static": "^7.0.4",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.11.5",
-    "reflect-metadata": "^0.2.1",
+    "reflect-metadata": "^0.2.2",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "@athenna/test": "^4.23.0",
-    "@athenna/tsconfig": "^4.12.0",
+    "@athenna/test": "^4.24.0",
+    "@athenna/tsconfig": "^4.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^3.0.1",
-    "prettier": "^2.8.7"
+    "nodemon": "^3.1.0",
+    "prettier": "^2.8.8"
   },
   "c8": {
     "all": true,
@@ -263,6 +263,7 @@
       "facades": "src/providers/facades",
       "services": "src/services",
       "jobs": "src/jobs",
+      "guards": "src/guards",
       "workers": "src/workers",
       "validators": "src/validators",
       "commands": "src/commands",
